--- a/src/assets/styles/variables.less
+++ b/src/assets/styles/variables.less
@@ -3,10 +3,12 @@
 
 // 背景色
 @bgColor: #eee;
+@bgColor2: #ccc;
 
 // 字号大小
 @sizeXL: 26px;
 @sizeL: 18px;
+@sizeL_2: 16px;
 @sizeM: 14px;
 @sizeS: 12px;
 
