feat：商品列表、navbar组件

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -40,4 +40,5 @@ $mini: 20px;
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 :export {
   theme: $theme;
+  black: $black;
 }
