--- a/mall3.0/src/styles/index.scss
+++ b/mall3.0/src/styles/index.scss
@@ -1,3 +1,8 @@
 @import './reset.scss';
 @import './normalize.scss';
 @import './variables.scss';
+
+// hotfix：https://github.com/ftlabs/fastclick/issues/510
+html {
+  touch-action: manipulation;
+}
